# rvpacker-txt-rs

./: .gitignore  .rustfmt.toml  2.2.657 СПИСОК ИЗМЕНЕНИЙ.html  2.2.658 СПИСОК ИЗМЕНЕНИЙ.html  2.2.659 СПИСОК ИЗМЕНЕНИЙ.html  2.2.7 СПИСОК ИЗМЕНЕНИЙ.html  2.2.701 СПИСОК ИЗМЕНЕНИЙ.html  2.2.71 СПИСОК ИЗМЕНЕНИЙ.html  2.2.711 СПИСОК ИЗМЕНЕНИЙ.html  2.2.712 СПИСОК ИЗМЕНЕНИЙ.html  2.2.713 СПИСОК ИЗМЕНЕНИЙ.html  2.2.72 СПИСОК ИЗМЕНЕНИЙ.html  2.2.721 СПИСОК ИЗМЕНЕНИЙ.html  2.2.722 СПИСОК ИЗМЕНЕНИЙ.html  2.2.723 СПИСОК ИЗМЕНЕНИЙ.html  2.2.724 СПИСОК ИЗМЕНЕНИЙ.html  2.2.725 СПИСОК ИЗМЕНЕНИЙ.html  Cargo.toml  LICENSE-ru.md  LICENSE.md  README-ru.md  README.md  maps_trans.txt  names.txt  new-write.js  rustfmt.toml  write.js
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: запрос-функции.md  ошибка-в-переводе.md  сообщение-об-ошибке.md
cli/: Cargo.toml  json-writer  write.js
cli/maps/: names_trans.txt
cli/other/: CommonEvents_trans.txt  Skills_trans.txt  System.txt  Weapons.txt
cli/plugins/: plugins_trans.js
cli/ruby-writer/: global.d.ts  package.json  program-localization.ts  read.ts  ruby-writer.ts  shuffle.ts  symbol-utils.ts  write.ts
cli/src/: main.rs  read.rs  shuffle.rs  write.rs
gui/: index.css  index.html  main.js  package-lock.json  package.json  preload.js  settings.json  tsconfig.json  vite.config.ts
gui-tauri/: .gitignore  package.json
gui-tauri/src-dev/: about.html  about.js  help.html  help.js  hotkeys.js  main.html  main.js  style.css
gui-tauri/src-tauri/: Cargo.toml  tauri.conf.json
gui/maps/: maps_trans.txt  names_trans.txt
gui/original/: Enemies.json  Map002.json
gui/other/: Armors_trans.txt  Skills.txt  Skills_trans.txt
gui/src/: about.html  about.ts  global.d.ts  help.html  help.ts  hotkeys.html  hotkeys.ts  htmlelement-extensions.ts  main.html  main.ts  material.css  options.html  options.ts  string-extensions.ts  style.css  theme-styles.css  themes.ts
gui/src-dev/: about.html  about.js  hotkeys.html  main.html  main.js  options.html  options.js
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/res/: en.json  ru.json  themes.json
gui/src-tauri/src/: main.rs  read.rs  write.rs  writer.rs
maps/: maps.txt  maps_trans.txt
original/: Actors.json  Armors.json  Items.json  Map105.json  Skills.json  System.json  Weapons.json
other/: Armors.txt  Armors_trans.txt  CommonEvents.txt  CommonEvents_trans.txt  Enemies.txt  Enemies_trans.txt  Items.txt  Items_trans.txt  Skills_trans.txt  System.txt  System_trans.txt  Troops_trans.txt  Weapons_trans.txt
output/: Map002.json  Map003.json  Map004.json  Map005.json  Map008.json  Map009.json  Map010.json  Map011.json  Map013.json  Map014.json  Map015.json  Map016.json  Map017.json  Map019.json  Map020.json  Map021.json  Map022.json  Map023.json  Map024.json  Map026.json  Map027.json  Map028.json  Map029.json  Map030.json  Map031.json  Map032.json  Map033.json  Map034.json  Map036.json  Map037.json  Map038.json  Map039.json  Map040.json  Map041.json  Map042.json  Map044.json  Map045.json  Map046.json  Map047.json  Map048.json  (+119 more)
plugins/: plugins_trans.txt
src/: functions.rs  localization.rs  main.rs  read.rs  shuffle.rs  statics.rs  types.rs  write.rs
translation/maps/: maps.txt  maps_trans.txt
(+276 files in other folders)
