[package]
name = "fh-termina-json-writer"
version = "3.4.0"
description = "Репозиторий с инструментами, позволяющими редактировать текст F&H2: Termina и компилировать его в .json файлы"
authors = ["savannstm"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "dialog-open", "os-all", "clipboard-all", "window-close", "window-create", "dialog-message", "process-exit", "dialog-ask", "fs-write-file", "fs-create-dir", "fs-remove-file", "fs-read-dir", "fs-read-file", "fs-exists", "fs-copy-file", "fs-remove-dir", "path-all", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1.10.0"
regex = "1.10.4"

[features]
custom-protocol = ["tauri/custom-protocol"]
