[package]
name = "rpgm-translation-gui"
version = "3.5.1"
description = "Репозиторий с инструментами, позволяющими редактировать текст RPG Maker VX/MV/VXAce и компилировать его в обратно в оригинальные файлы"
authors = ["savannstm"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "dialog-open", "os-all", "window-close", "window-create", "dialog-message", "process-exit", "dialog-ask", "fs-write-file", "fs-create-dir", "fs-remove-file", "fs-read-dir", "fs-read-file", "fs-exists", "fs-copy-file", "fs-remove-dir", "path-all", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1.10.0"
regex = "1.10.4"
indexmap = "2.2.6"
fnv = "1.0.7"
fancy-regex = "0.13.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
